# CMakeTemplate

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt
benchmark/example/: bench_example.cc
benchmark/tools/: bench_logger.cc
docs/guide/en-US/: README.md
docs/guide/zh-CN/: README.md
include/global/: Global.hpp  SuperQueue.hpp  SuperStack.hpp
include/tools/: Id.hpp  Logger.hpp
src/: main.cc
src/core/: CMakeLists.txt
src/core/connection/: connection.cc
src/core/server/: server.cc
src/utils/: CMakeLists.txt
tests/: CMakeLists.txt
tests/tools/: test_id.cc  test_logger.cc
